src/go-controller/manifests/namespace.yaml
# Copyright 2026 Defense Unicorns
# SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-Defense-Unicorns-Commercial

apiVersion: v1
kind: Namespace
metadata:
  name: uds-system
  labels:
    zarf.dev/agent: ignore
    istio.io/dataplane-mode: ambient
