src/go-controller/manifests/deployment.yaml
# Copyright 2026 Defense Unicorns
# SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-Defense-Unicorns-Commercial

apiVersion: apps/v1
kind: Deployment
metadata:
  name: uds-controller
  namespace: uds-system
  labels:
    app: uds-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uds-controller
  template:
    metadata:
      labels:
        app: uds-controller
        zarf.dev/agent: ignore
    spec:
      serviceAccountName: uds-controller
      containers:
        - name: controller
          image: uds-core-controller:dev
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: keycloak-identity
              mountPath: /var/run/secrets/keycloak
              readOnly: true
          ports:
            - name: webhook
              containerPort: 9443
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: webhook
              scheme: HTTPS
            initialDelaySeconds: 1
            periodSeconds: 2
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: keycloak-identity
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  audience: http://keycloak-http.keycloak.svc.cluster.local/realms/uds
                  expirationSeconds: 3600
