src/go-controller/manifests/service.yaml
# Copyright 2026 Defense Unicorns
# SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-Defense-Unicorns-Commercial

apiVersion: v1
kind: Service
metadata:
  name: uds-controller
  namespace: uds-system
  labels:
    app: uds-controller
spec:
  ports:
    - name: webhook
      port: 443
      targetPort: 9443
      protocol: TCP
  selector:
    app: uds-controller
